RESOLVED FIXED43229
REGRESSION: False-positive memory leak within JSArray::JSArray
https://bugs.webkit.org/show_bug.cgi?id=43229
Summary REGRESSION: False-positive memory leak within JSArray::JSArray
Mark Rowe (bdash)
Reported 2010-07-29 18:46:45 PDT
The buildbot is showing many memory leaks within JSArray. See the numerous DumpRenderTreeFoo-leaks.txt files at <http://build.webkit.org/results/SnowLeopard%20Intel%20Leaks/r64324%20(9455)/>, such as <http://build.webkit.org/results/SnowLeopard%20Intel%20Leaks/r64324%20(9455)/DumpRenderTree14-leaks.txt>.
Attachments
Patch to save alloc'ed pointer in ArrayAStorage structure. (6.69 KB, patch)
2010-08-02 10:58 PDT, Michael Saboff
barraclough: review-
Updated patch without redundant void* casts. (6.63 KB, patch)
2010-08-02 13:57 PDT, Michael Saboff
barraclough: review+
Mark Rowe (bdash)
Comment 1 2010-07-29 18:48:13 PDT
Michael Saboff
Comment 2 2010-08-02 10:58:50 PDT
Created attachment 63237 [details] Patch to save alloc'ed pointer in ArrayAStorage structure.
Gavin Barraclough
Comment 3 2010-08-02 13:46:19 PDT
Comment on attachment 63237 [details] Patch to save alloc'ed pointer in ArrayAStorage structure. Please remove the redundant static_cast<void*>()s
Michael Saboff
Comment 4 2010-08-02 13:57:21 PDT
Created attachment 63257 [details] Updated patch without redundant void* casts.
Gavin Barraclough
Comment 5 2010-08-03 14:29:43 PDT
Transmitting file data .... Committed revision 64588.
WebKit Review Bot
Comment 6 2010-08-03 14:48:59 PDT
http://trac.webkit.org/changeset/64588 might have broken GTK Linux 64-bit Debug
Note You need to log in before you can comment on or make changes to this bug.