Change to keep returned pointer from malloc family functions to quiet memory leak detect.  The pointer is saved in the new m_allocBase member of the ArrayStorage structure.  This fixes the issue found in https://bugs.webkit.org/show_bug.cgi?id=43229.

Patch by Michael Saboff <msaboff@apple.com> on 2010-08-03
Reviewed by Gavin Barraclough.

As part of this change, we use m_allocBase when reallocating and
freeing the memory associated with ArrayStorage.

* runtime/JSArray.cpp:
(JSC::JSArray::JSArray):
(JSC::JSArray::~JSArray):
(JSC::JSArray::putSlowCase):
(JSC::JSArray::increaseVectorLength):
(JSC::JSArray::increaseVectorPrefixLength):
* runtime/JSArray.h:



Canonical link: https://commits.webkit.org/55410@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64588 268f45cc-cd09-0410-ab3c-d52691b4dbfc